; ModuleID = '/home/carl/AnghaBench/hashcat/deps/LZMA-SDK/C/extr_LzmaEnc.c_LzmaEnc_Encode2.c'
source_filename = "/home/carl/AnghaBench/hashcat/deps/LZMA-SDK/C/extr_LzmaEnc.c_LzmaEnc_Encode2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32, i64 }

@SZ_OK = common dso_local global i64 0, align 8
@SZ_ERROR_PROGRESS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_5__*, i32*)* @LzmaEnc_Encode2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @LzmaEnc_Encode2(%struct.TYPE_5__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca [768 x i64], align 16
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i64, i64* @SZ_OK, align 8
  store i64 %7, i64* %5, align 8
  %8 = getelementptr inbounds [768 x i64], [768 x i64]* %6, i64 0, i64 0
  store i64 0, i64* %8, align 16
  %9 = getelementptr inbounds [768 x i64], [768 x i64]* %6, i64 0, i64 0
  %10 = load i64, i64* %9, align 16
  %11 = getelementptr inbounds [768 x i64], [768 x i64]* %6, i64 0, i64 1
  store i64 %10, i64* %11, align 8
  br label %12

12:                                               ; preds = %42, %2
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %14 = call i64 @LzmaEnc_CodeOneBlock(%struct.TYPE_5__* %13, i32 0, i32 0)
  store i64 %14, i64* %5, align 8
  %15 = load i64, i64* %5, align 8
  %16 = load i64, i64* @SZ_OK, align 8
  %17 = icmp ne i64 %15, %16
  br i1 %17, label %23, label %18

18:                                               ; preds = %12
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 2
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %18, %12
  br label %43

24:                                               ; preds = %18
  %25 = load i32*, i32** %4, align 8
  %26 = icmp ne i32* %25, null
  br i1 %26, label %27, label %42

27:                                               ; preds = %24
  %28 = load i32*, i32** %4, align 8
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 4
  %32 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %33 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %32, i32 0, i32 0
  %34 = call i32 @RangeEnc_GetProcessed(i32* %33)
  %35 = call i64 @ICompressProgress_Progress(i32* %28, i32 %31, i32 %34)
  store i64 %35, i64* %5, align 8
  %36 = load i64, i64* %5, align 8
  %37 = load i64, i64* @SZ_OK, align 8
  %38 = icmp ne i64 %36, %37
  br i1 %38, label %39, label %41

39:                                               ; preds = %27
  %40 = load i64, i64* @SZ_ERROR_PROGRESS, align 8
  store i64 %40, i64* %5, align 8
  br label %43

41:                                               ; preds = %27
  br label %42

42:                                               ; preds = %41, %24
  br label %12

43:                                               ; preds = %39, %23
  %44 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %45 = call i32 @LzmaEnc_Finish(%struct.TYPE_5__* %44)
  %46 = load i64, i64* %5, align 8
  ret i64 %46
}

declare dso_local i64 @LzmaEnc_CodeOneBlock(%struct.TYPE_5__*, i32, i32) #1

declare dso_local i64 @ICompressProgress_Progress(i32*, i32, i32) #1

declare dso_local i32 @RangeEnc_GetProcessed(i32*) #1

declare dso_local i32 @LzmaEnc_Finish(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
